cabal-version:   3.6
name:            urist-mcbrowser
version:         0.0.0.1
synopsis:        Yet another interactive fiction library.
description:     Yet another interactive fiction library.
homepage:        https://github.com/PPKFS/urist-mcbrowser
bug-reports:     https://github.com/PPKFS/urist-mcbrowser/issues
license:         MIT
author:          Avery
maintainer:      Avery <thecommunistduck@hotmail.co.uk>
copyright:       2022 Avery
category:        Game Development
build-type:      Simple
tested-with: GHC == 9.2.4

source-repository head
  type:     git
  location: https://github.com/PPKFS/urist-mcbrowser.git

common common-options
  build-depends:
      base
    , solitude
    , breadcrumbs
    , containers
    , effectful
    , effectful-core
    , effectful-plugin
    , effectful-th
    , enummapset
    , optics-extra
    , prettyprinter
    , prettyprinter-ansi-terminal
    , template-haskell
    , text
    , text-display
    , xeno
    , attoparsec

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -fhide-source-paths -Wno-unused-top-binds
    -Wmissing-deriving-strategies -O2 -flate-specialise
    -fspecialise-aggressively -fprint-potential-instances
    -fno-warn-unused-do-bind -haddock -fwrite-ide-info
    -fplugin=Effectful.Plugin -Wunused-packages
  default-language: GHC2021
  default-extensions:
    OverloadedLabels
    DuplicateRecordFields
    DerivingStrategies
    TypeFamilies
    OverloadedStrings
    NoImplicitPrelude
    QuasiQuotes
    LambdaCase
    DataKinds
    MultiWayIf

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Urist.Parser
    Urist.Region
    Urist.UndergroundRegion
    Urist.Site
    Urist.ParseHelpers
    Urist.Structure
    Urist.Landmass
    Urist.Id
    Urist.Identity
    Urist.Artifact
    Urist.ArtisticForm
    Urist.Entity
    Urist.EntityPopulation
    Urist.HistoricalEra
    Urist.HistoricalEventCollection
    Urist.HistoricalEventRelationshipSupplement
    Urist.HistoricalEventRelationship
    Urist.HistoricalEvent
    Urist.HistoricalFigure
    Urist.River
    Urist.WorldConstruction
    Urist.WrittenContent

test-suite urist-mcbrowser-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , tasty
    , tasty-golden
    , tasty-hunit
    , exceptions
    , urist-mcbrowser
    , aeson
    , filepath
    , directory
    , time
    , pretty
    , Diff
    , tagged
    , optparse-applicative
    , bytestring
    , solitude
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    QuasiQuotes
    TemplateHaskell
    NoImplicitPrelude

  other-modules: